# rascil

./: .coveralls.yml  .git-blame-ignore-revs  .gitlab-ci.yml  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  CONTRIBUTORS  Makefile  Pipfile  README.md  Test Results - Unittests_in_processing_components.html  Test Results - pytest_in_processing_components.html  Test Results - pytest_in_processing_components.xml  build_bot.sh  create_mr.py  make-venv  pytest.ini  readthedocs.yml  requirements-docs.txt  requirements-test.in  requirements-test.txt  requirements.in  requirements.txt  setup.cfg  setup.py  unit-tests-workflows.xml
.run/: Unittests in processing_components.run.xml
cluster_tests/: Makefile
cluster_tests/ritoy/: cluster_test_ritoy.py  cluster_test_ritoy_slurm.py
cluster_tests/ritoy-numba/: cluster_test_ritoy_numba.py
cluster_tests/test_image/: cluster_test_image.py
data/configurations/: LOW_SKA-TEL-SKO-0000422_Rev3.txt  LOW_SKA-TEL-SKO-0000422_Rev3_AA0.5.txt  README.md  SKA-TEL-SKO-0000422_03_SKA1_LowConfigurationCoordinates.csv  SKA-TEL-SKO-0000422_03_SKA1_LowConfigurationCoordinates_AA0p5.csv  SKA1-LOW-AA0.5-v1.1_AA0p5.txt  askap.cfg  askap_local.cfg  convert_geodetic_to_xyz.py  lofar.cfg  lofar_local.cfg  mkatplus.cfg  mkatplus_local.cfg  ska1low.cfg
docker/: CONTRIBUTING.md  Makefile  README.md  docker-compose-base.yml  docker-compose-full.yml
docker/make/: Makefile
rascil/: __init__.py  phyconst.py  version.py
rascil-docker/: Makefile  README.md  docker-compose-base.yml  docker-compose-full.yml
rtd-docs/: Makefile  conf.py  index.rst
test_pip/: Dockerfile
util/: visibility_fitting_sympy.py  xmlcombine.py
(+296 files in other folders)
