[build_ext]
inplace=1

[metadata]
description-file = README.md

[aliases]
test=pytest

[coverage:run]
branch = True
source = rascil

[tool:pytest]
testpaths = tests/data_models
addopts = --cov --json-report --json-report-file=htmlcov/report.json --cov-report term --cov-report html:coverage
          --cov-report xml:coverage.xml --pylint --pylint-error-types=EF --junitxml=unit-tests.xml

# Define `python setup.py build_sphinx`
[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1
builder = html
