[build_ext]
inplace=1

[metadata]
description-file = README.md

[aliases]
test=pytest

[bumpver]
current_version = "0.2.2-beta0"
version_pattern = "MAJOR.MINOR.PATCH[-TAGNUM]"
commit_message = "Release {new_version}"
commit = True
tag = False
push = False

[bumpver:file_patterns]
setup.cfg =
    current_version = "{version}"
rascil/version.py =
    __version__ = "{version}"
docs/src/conf.py =
    version = "{version}"
    release = "{version}"
