[build_ext]
inplace=1

[metadata]
description-file = README.md

[aliases]
test=pytest

[bumpver]
current_version = "0.6.0"
version_pattern = "MAJOR.MINOR.PATCH[PYTAGNUM]"
commit_message = "Release {new_version}"
commit = True
tag = True
push = True

[bumpver:file_patterns]
setup.cfg =
    current_version = "{version}"
rascil/version.py =
    __version__ = "{version}"
docs/src/conf.py =
    version = "{version}"
    release = "{version}"
docker/kubernetes/values.yaml =
    image: "artefact.skao.int/rascil-full:{version}"
        tag: {version}